<resources>
    <string name="app_name">Bee Vocab</string>
    <string name="bumbee">Welcome back</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="don_t_have_">Don’t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="by_signing_">By signing up you accept Terms of Service\nand Policy privacy</string>
    <string name="already_hav">Already have an account? Log In</string>
    <string name="let_s_get_s">Get started Language Studying</string>
    <string name="skip_for_no">Skip for now</string>
    <string name="bumbeee">BEE</string>
    <string name="language_translator">Language Translator</string>
    <string name="translate">Translate</string>
    <string name="translated_text">Translated Text</string>
    <string name="source_text">Source text</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>