<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation ="vertical"
    android:background="@drawable/android_sma"
    tools:context=".activities.note.LanguageTranslator">
    <TextView
        android:id="@+id/edtLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/language_translator"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/idFromSpinner"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_right"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />

        <Spinner
            android:id="@+id/idToSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>


    <EditText
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:hint="Enter your Text"
        android:textColor="#F9FBE7" />
    <Button
        android:id="@+id/idTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rb_new_circle"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:id="@+id/idTranslated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/translated_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="20sp" />
</LinearLayout>


