<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_sma"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/android_sma"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/bee"
        android:layout_width="123dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="133dp"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText"
        android:src="@drawable/bee" />

    <TextView
        android:id="@+id/bumbee"
        android:layout_width="@dimen/_226sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="214dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bumbee"
        android:textAppearance="@style/bumbee"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="283dp"
        android:gravity="center_horizontal|top"
        android:minHeight="48dp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="16sp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="321dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHighlight="#000000"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="362dp"
        android:gravity="center_horizontal|top"
        android:minHeight="48dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="321dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="#000000"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnLogIn"
        android:layout_width="118dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="444dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="15dp"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/forgot_pass"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="544dp"
        android:gravity="center_horizontal|top"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/_12sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="13dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/don_t_have_"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="621dp"
        android:gravity="center_horizontal|top"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/_12sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="-21dp"
                android:layout_marginBottom="15dp"
                android:text="@string/don_t_have_"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="163dp"
        android:background="@drawable/android_sma"
        android:visibility="invisible" />

</RelativeLayout>