<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_sma"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    tools:context=".activities.introduction"
    android:background="@drawable/android_sma">

    <ImageView
        android:id="@+id/bee"
        android:layout_width="144dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="115dp"
        android:contentDescription="TODO"
        android:src="@drawable/bee"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/bumbee"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="199dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bumbeee"
        android:textAppearance="@style/bumbee"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/let_s_get_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bee"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="63dp"
        android:gravity="top"
        android:text="@string/let_s_get_s"
        android:textAppearance="@style/let_s_get_s"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/button"
        android:layout_width="183dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/let_s_get_s"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="-113dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="57dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="51dp"
                android:layout_marginBottom="18dp"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="-113dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="18dp"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/skip_for_no"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="576dp"
        android:gravity="top"
        android:text="@string/skip_for_no"
        android:textAppearance="@style/skip_for_no"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>